# rust-tui-splashscreen

./: Cargo.toml  LICENSE  README.md
src/: main.rs
