[package]
name = "rust-tui-splashscreen"
version = "0.1.0"
description = "A Ratatui personal terminal dashboard that combines styled TUI panels with preserved ASCII output from shell commands."
authors = ["TheRyanMajd <rm97798@uga.edu>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ansi-to-tui = "8.0.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
whoami = "2.1.1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
